--- a/trunk/cvNew.tex
+++ b/trunk/cvNew.tex
@@ -25,13 +25,13 @@
 \end{flushright}
 \begin{flushleft}
  
-February 20, 2010\\*\vspace{10 mm}
+November 7, 2011\\*\vspace{10 mm}
 Dear Sir/Madam
 \end{flushleft}
 I am writing in response to your advertised internship position at Facebook in 2012.
 
 I am a fourth year student in Trinity College Dublin studying Computer Science, and expect to graduate from my undergraduate degree course in the summer of 2012 with a I.I. I then plan to go on a pursue a masters in computer science.\\
-I am particularly interested in the advertised post because I would love to work for one of the most successful companies in the I.T. industry. To me Facebook seems to be one of the most innovative companies in the industry, with a slew of great products alongside their core business. I would very much like to be a part of such an organization.\\
+I am particularly interested in the advertised post because I would love to work for one of the most successful companies in the I.T. industry. To me Facebook seems to be one of the most innovative companies in the industry. I would very much like to be a part of such an organization.\\
 I feel I am suited to the position because I have very good teamwork, communication and presentation skills. I spent the previous summer working for IBM, which helped develop these skills greatly. In addition I have very good technical skills as outlined in my curriculum vitae. I more than meet all of the requirements outlined. I am based in Dublin but moving around the country is not a problem for me.
 \\*
 \\*
@@ -72,7 +72,7 @@ divoapple@gmail.com}
     
     Expected to graduate B.A.mod with I.I\\
     Junior Sophister achieved II.I \\
-    Senior Freshman achieved II.II\\
+    Senior Freshman achieved II.II (59.3\%)\\
     Junior Freshman achieved II.I\\
  
     Sutton Park, Sutton, Dublin, 2002 - 2008,\\
@@ -110,9 +110,9 @@ divoapple@gmail.com}
       \end{itemize}
 {\bf Programming} 
        \begin{itemize}
-        \item[] Very good level of experience programming in C/C++, Java, Bash, Python and Javascript.\\
+        \item[] Very good level of experience programming in C/C++, Java, Python and Javascript.\\
         I have a good knowledge of OOP concepts and design patterns as well as functional, imperative and declarative programming paradigms.  
-        In addition I have a good working knowledge of Haskell, Prolog, PHP, SQL (Oracle DBMS, IBM DB2 and MySQL), VHDL, Eiffel, CSS, HTML and C\#.\\
+        In addition I have a good working knowledge of Haskell, Prolog, PHP, SQL (Oracle DBMS, IBM DB2 and MySQL), VHDL, Eiffel, CSS, Bash, HTML and C\#.\\
         I enjoy programming in my free time and have many, many personal projects. These range from micro-controller projects, generative artwork, Ajax driven and static web-design, design of various database schema, JSON parsers, and network programming.\\
         Also have many projects as a result of university course work. These range from simple compilers, logic puzzles, implementation of various data structures, multi-threaded programs, XML and JSON parsers, SSE programming, a network proxy server, a web-server, an email server and client and database schema.
     \end{itemize}
